# so-hs

./: .gitignore  .travis.yml  README.md  TODO.md  so.cabal  stack.yaml
app/: Main.hs
src/: Cli.hs  Config.hs  Markdown.hs  Prompt.hs  StackOverflow.hs  State.hs  Types.hs  Utils.hs
src/Interface/: Brick.hs  Common.hs  Prompt.hs
src/Interface/Brick/: Deprecated.hs
src/StackOverflow/: Google.hs  Types.hs
src/StackOverflow/Google/: Deprecated.hs
src/Types/: StackOverflow.hs
src/Utils/: LowLevel.hs
test/: Spec.hs
test/fixtures/: google_english_meta.html  google_scrape_failed.html  valid_questions_api_response_2.json
test/fixtures/config/: bad_ui.yml  no_sites.yml  serverfault_default.yml  site_as_string.yml
test/fixtures/markdown/: valid.md
test/fixtures/stackexchange/: invalid_questions_api_response.json  valid_questions_api_response_30.json
