name:                so
version:             0.1.0.0
synopsis:            A terminal interface for StackExchange sites
-- description:
homepage:            https://github.com/SamTay/so#readme
license:             BSD3
license-file:        LICENSE
author:              Sam Tay
maintainer:          sam.chong.tay@gmail.com
copyright:           2017 Sam Tay
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fwarn-unused-binds -fwarn-unused-imports -fno-warn-type-defaults
  exposed-modules:     Cli
                     , Config
                     , Interface.Brick.Deprecated
                     , Interface.Common
                     , Interface.Prompt
                     , Markdown
                     , StackOverflow
                     , StackOverflow.Google.Deprecated
                     , Types
                     , Utils
  default-extensions:   BlockArguments
                      , DeriveFunctor
                      , FlexibleInstances
                      , GADTs
                      , GeneralizedNewtypeDeriving
                      , LambdaCase
                      , MultiWayIf
                      , NamedFieldPuns
                      , MultiParamTypeClasses
                      , OverloadedStrings
                      , QuasiQuotes
                      , RankNTypes
                      , RecordWildCards
                      , ScopedTypeVariables
                      , StandaloneDeriving
                      , TemplateHaskell
                      , TupleSections
  other-modules:       Types.StackOverflow
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , ansi-terminal
                     , async
                     , brick
                     , byline
                     , bytestring
                     , containers
                     , data-clist
                     , data-default
                     , directory
                     , exceptions
                     , filepath
                     , http-client
                     , megaparsec
                     , microlens
                     , microlens-th
                     , mtl
                     , optparse-applicative
                     , raw-strings-qq
                     , regex-tdfa
                     , scalpel-core
                     , tagsoup
                     , text
                     , vector
                     , vty
                     , wreq
                     , yaml
  default-language:    Haskell2010

executable so
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , exceptions
                     , microlens
                     , mtl
                     , so
                     , text
                     , yaml
  default-language:    Haskell2010

test-suite so-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aeson
                     , bytestring
                     , hspec
                     , so
                     , text
                     , yaml
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SamTay/so
